fix: java references